--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v4
         with: 
           repository: Arm-Examples/Hello_LPCXpresso55S69
-      - uses: Arm-Examples/publish-cmsis-example@create-initial-action
+      - uses: Arm-Examples/publish-cmsis-example@create-initial-example
         name: Import Project Action
         with:
           branch: ${{ github.head_ref || github.ref }}
