respond to review

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,7 @@
+#
+# Copyright (C) 2020-2024 Arm Limited or its affiliates and Contributors. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
 name: CI
 
 concurrency:
@@ -13,8 +17,8 @@ on:
     branches: [ main ]
 
 jobs:
-  import-project-action-test:
-    name: Import Action Test
+  publish-project-action-test:
+    name: Publish Action Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
