--- a/action.yml
+++ b/action.yml
@@ -1,3 +1,7 @@
+#
+# Copyright (C) 2020-2024 Arm Limited or its affiliates and Contributors. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
 name: publish-cmsis-example
 description: GitHub action to publish CMSIS example to keil.arm.com
 inputs:
@@ -9,7 +13,7 @@ inputs:
     description: "Project to import"
     required: true
   dry-run:
-    description: "Whether to just complete a dry-run. This can be useful to verify a project is convertable and uploadable without actually making it available on keil.arm.com"
+    description: "Whether to just complete a dry-run. This can be useful to verify a project is publishable without actually making it available on keil.arm.com"
     required: false
     default: "false"
   API_TOKEN:
@@ -18,22 +22,22 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Install solar-pack-project-importer
+    - name: Install publishing tool
       shell: bash
       run: |
-        echo "deb [trusted=yes] https://artifactory.tools.arm.com/artifactory/tools-deb bionic main" | sudo tee -a /etc/apt/sources.list.d/artifactory.list          
+        echo "deb [trusted=yes] https://artifactory.tools.arm.com/artifactory/tools-local-deb bionic main" | sudo tee -a /etc/apt/sources.list.d/artifactory.list          
         sudo apt-get update
-        sudo apt install -y solar-pack-project-importer
+        sudo apt install -y cmsis-example-importer
         sudo rm /etc/apt/sources.list.d/artifactory.list  
         sudo apt-get clean
-    - name: Upload project
+    - name: Publish project
       if: ${{ inputs.dry-run == false }}
       run: |
-        solar-pack-project-importer import repo -t ${{ inputs.API_TOKEN }} -w https://solar-search.api.keil.arm.com/ -u https://software.api.keil.arm.com/ -p ${{ github.workspace }}/${{ inputs.project-file }} --git --git-root ${{ github.workspace }} -s Token --verbose --intermediate-directory /tmp/intdir --clean-intermediate-directory false
+        cmsis-example-importer import repo -t ${{ inputs.API_TOKEN }} -w https://solar-search.api.keil.arm.com/ -u https://software.api.keil.arm.com/ -p ${{ github.workspace }}/${{ inputs.project-file }} --git --git-root ${{ github.workspace }} -s Token --verbose --intermediate-directory /tmp/intdir --clean-intermediate-directory false
       shell: bash
-    - name: Test project is uploadable (dry-run)
+    - name: Test project is publishable (dry-run)
       if: ${{ inputs.dry-run != false }}
       run: |
-        solar-pack-project-importer import repo -t ${{ inputs.API_TOKEN }} -w https://solar-search.api.keil.arm.com/ -u https://software.api.keil.arm.com/ -p ${{ github.workspace }}/${{ inputs.project-file }} --git --git-root ${{ github.workspace }} -s Token --verbose --intermediate-directory /tmp/intdir --clean-intermediate-directory false --dry-run
+        cmsis-example-importer import repo -t ${{ inputs.API_TOKEN }} -w https://solar-search.api.keil.arm.com/ -u https://software.api.keil.arm.com/ -p ${{ github.workspace }}/${{ inputs.project-file }} --git --git-root ${{ github.workspace }} -s Token --verbose --intermediate-directory /tmp/intdir --clean-intermediate-directory false --dry-run
       shell: bash
 
