--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,8 @@ DOCUMENTATION_PRODUCTION_OUTPUT_PATH = "./docs"
 VERSION_FILE_PATH = "version.properties"
 CHANGELOG_FILE_PATH = "CHANGELOG.md"
 AWS_BUCKET=""
-PROGRAMMING_LANGUAGE = "yaml"
+PROGRAMMING_LANGUAGE = "github_actions"
 MASTER_BRANCH = "main"
-FILE_LICENCE_IDENTIFIER = "Proprietary"
 
 [AutoVersionConfig]
 CONFIG_NAME = "JAVA"
