--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         with: 
           repository: Arm-Examples/Hello_LPCXpresso55S69
           path: test
-      - uses: ./action.yml
+      - uses: ./
         name: Import Project Action
         with:
           branch: main
