`[release]` make sure to use `workflow_dispatch` not `workflow_call` (#2)
<!--
Copyright (C) 2020-2024 Arm Limited or its affiliates and Contributors.
All rights reserved.
SPDX-License-Identifier: Apache-2.0
-->
### Description

<!--
Please add any detail or context that would be useful to a reviewer.
-->

Make sure to use `workflow_dispatch` not `workflow_call`

### Test Coverage

<!--
Please put an `x` in the correct box e.g. `[x]` to indicate the testing
coverage of this change.
-->

- [ ]  This change is covered by existing or additional automated tests.
- [ ] Manual testing has been performed (and evidence provided) as
automated testing was not feasible.
- [x] Additional tests are not required for this change (e.g.
documentation update).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,15 @@ jobs:
     name: Publish Action Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4 # this repository
+      - uses: actions/checkout@v4 # test repository
         with: 
           repository: Arm-Examples/Hello_LPCXpresso55S69
-      - uses: Arm-Examples/publish-cmsis-example@main
+          path: test
+      - uses: ./
         name: Import Project Action
         with:
-          branch: ${{ github.head_ref || github.ref }}
-          project-file: ./hello.csolution.yml
+          branch: main
+          project-file: ./test/hello.csolution.yml
           dry-run: true
           API_TOKEN: ${{ secrets.API_TOKEN }}
