--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ patch = "changes/*.bugfix"
 directory = "changes"
 filename = "CHANGELOG.md"
 package = "import-project-action"
-title_format = ""
+title_format = "{version} ({project_date})"
 start_string = """
 [//]: # (begin_release_notes)
 """
