--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,5 @@ jobs:
           branch: main
           project-file: ./test/hello.csolution.yml
           dry-run: true
-          API_TOKEN: ${{ secrets.API_TOKEN }}
+          PUBLISH_API_KEY: ${{ secrets.KEIL_API_TOKEN }}
+          CMSIS_API_KEY: ${{ secrets.CMSIS_API_KEY }}
