:sparkles: Use new version of publisher CLI tool (#6)
<!--
Copyright (C) 2020-2024 Arm Limited or its affiliates and Contributors.
All rights reserved.
SPDX-License-Identifier: Apache-2.0
-->
### Description

<!--
Please add any detail or context that would be useful to a reviewer.
-->

Use new version of publisher CLI tool

### Test Coverage

<!--
Please put an `x` in the correct box e.g. `[x]` to indicate the testing
coverage of this change.
-->

- [x]  This change is covered by existing or additional automated tests.
- [ ] Manual testing has been performed (and evidence provided) as
automated testing was not feasible.
- [ ] Additional tests are not required for this change (e.g.
documentation update).

---------

Co-authored-by: Adrien CABARBAYE <adrien.cabarbaye@arm.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,10 @@ jobs:
           repository: Arm-Examples/Hello_LPCXpresso55S69
           path: test
       - uses: ./
-        name: Import Project Action
+        name: Publish Project Action
         with:
           branch: main
           project-file: ./test/hello.csolution.yml
           dry-run: true
-          API_TOKEN: ${{ secrets.API_TOKEN }}
+          PUBLISH_API_KEY: ${{ secrets.KEIL_API_TOKEN }}
+          CMSIS_API_KEY: ${{ secrets.CMSIS_API_KEY }}
